[workspace]
members = ["crates/*", "examples/*"]


[profile.dev.package."*"]
opt-level = 1

[profile.dev.build-override]
opt-level = 2

[profile.dev.package.haste]
opt-level = 2


[profile.release]
debug = true

[profile.release.package."*"]
opt-level = 3

[profile.release.build-override]
opt-level = 2
