[workspace]
members = ["crates/*", "examples/*"]

[profile.dev.package."*"]
opt-level = 1
[profile.dev.package.haste]
opt-level = 1

[profile.release]
strip = true

# Always build proc-macros and build scripts with optimizations:
[profile.dev.build-override]
opt-level = 2
[profile.release.build-override]
opt-level = 2

