[package]
name = "haste"
version = "0.1.0"
edition = "2021"

[features]
metrics = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.2"
bytemuck = { version = "1.13.0", features = ["derive", "zeroable_maybe_uninit", "zeroable_atomics"] }
hashbrown = { version = "0.13.1", features = ["raw"] }
libc = "0.2.138"
pollster = "0.2.5"
futures-lite = "1.12.0"
tokio = { version = "1.24.2", features = ["rt-multi-thread", "sync"] }
smallvec = { version = "1.10.0", features = ["const_new", "union"] }
parking_lot_core = "0.9.7"
pin-project = "1.0.12"
tracing = { version = "0.1.37" }
dashmap = { version = "5.4.0", features = ["raw-api"] }
fastrand = "1.9.0"
st3 = "0.4.1"
crossbeam-utils = "0.8.15"
cpu-time = "1.0.0"
fxhash = "0.2.1"
num_cpus = "1.15.0"
crossbeam-deque = "0.8.3"

[dependencies.haste_macros]
path = "../haste_macros"

[[example]]
name = "rad"
path = "examples/rad.rs"

[dev-dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
