[package]
name = "haste"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6.0"
bytemuck = { version = "1.13.1", features = ["zeroable_maybe_uninit"] }
context = "3.0.0"
crossbeam-channel = "0.5.8"
crossbeam-deque = "0.8.3"
dashmap = "5.4.0"
fastrand = "1.9.0"
fxhash = "0.2.1"
hashbrown = { version = "0.13.2", features = ["raw"] }
haste-macros = { path = "../haste-macros" }
parking_lot_core = "0.9.7"
psm = "0.1.21"
region = "3.0.0"
smallvec = { version = "1.10.0", features = ["union"] }
stacker = "0.1.15"
