[package]
name = "gotime"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
tokio = { version = "1.25.0", features = ["fs"] }
smallvec = { version = "1.10.0", features = ["union"] }

[dependencies.bstr]
version = "1.2.0"

[dependencies.haste]
path = "../../crates/haste"

[dev-dependencies]
pretty_assertions = "1.3.0"
