[package]
name = "gotime"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
tokio = { version = "1.25.0", features = ["fs", "process", "io-util"] }
smallvec = { version = "1.10.0", features = ["union"] }
serde = { version = "1.0.156", features = ["derive", "rc"] }
serde_json = "1.0.94"
pin-project = "1.0.12"
fast-float = "0.2.0"
notify = "5.1.0"
dashmap = "5.4.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = { version = "0.1.37", features = ["release_max_level_warn"] }
futures = { version = "0.3.27", default-features = false, features = ["alloc"] }
cpu-time = "1.0.0"
hashbrown = { version = "0.13.2", features = ["raw"] }
fxhash = "0.2.1"
phf = { version = "0.11.1", features = ["macros"] }
arrayvec = "0.7.2"
tikv-jemallocator = "0.5.0"
bitflags = "2.0.2"
rug = { version = "1.19.2", features = ["complex"] }

[dependencies.bstr]
version = "1.2.0"

[dependencies.haste]
path = "../../crates/haste"
features = ["metrics"]

[dev-dependencies]
pretty_assertions = "1.3.0"
