[package]
name = "gotime"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.2"
bitflags = "2.0.2"
clap = { version = "4.1.4", features = ["derive"] }
cpu-time = "1.0.0"
crossbeam-utils = "0.8.15"
dashmap = "5.4.0"
fast-float = "0.2.0"
futures = { version = "0.3.27", default-features = false, features = ["alloc"] }
fxhash = "0.2.1"
gmp-mpfr-sys = { version = "1.5.2", features = ["force-cross"] }
hashbrown = { version = "0.13.2", features = ["raw"] }
notify = "5.1.0"
phf = { version = "0.11.1", features = ["macros"] }
pin-project = "1.0.12"
rug = { version = "1.19.2", features = ["complex"] }
serde = { version = "1.0.156", features = ["derive", "rc"] }
serde_json = "1.0.94"
smallvec = { version = "1.10.0", features = ["union"] }
tikv-jemallocator = "0.5.0"
tracing = { version = "0.1.37", features = ["release_max_level_off"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dependencies.bstr]
version = "1.2.0"

[dependencies.haste]
path = "../../crates/haste"
features = ["metrics"]

[dev-dependencies]
pretty_assertions = "1.3.0"
